--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -36,7 +36,7 @@
         <EditText
             android:id="@+id/uname"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="48dp"
             android:inputType="text"
             android:background="@drawable/box"
             android:textAlignment="center"
@@ -46,16 +46,17 @@
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:inputType="textWebEmailAddress"
-            android:background="@drawable/box"
-            android:textAlignment="center"
+            android:layout_height="48dp"
             android:layout_margin="10dp"
-            android:hint="@string/email"/>
+            android:background="@drawable/box"
+            android:hint="@string/email"
+            android:inputType="textWebEmailAddress"
+            android:textAlignment="center"
+            android:textColorHint="#8D6E63" />
         <EditText
             android:id="@+id/pass"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="48dp"
             android:inputType="textPassword"
             android:background="@drawable/box"
             android:textAlignment="center"
@@ -65,17 +66,18 @@
         <EditText
             android:id="@+id/confirm_pass"
             android:layout_width="match_parent"
-            android:inputType="textPassword"
-            android:layout_height="40dp"
-            android:background="@drawable/box"
-            android:textAlignment="center"
+            android:layout_height="48dp"
             android:layout_margin="10dp"
-            android:hint="@string/confirm_password"/>
+            android:background="@drawable/box"
+            android:hint="@string/confirm_password"
+            android:inputType="textPassword"
+            android:textAlignment="center"
+            android:textColorHint="#8D6E63" />
 
         <Spinner
         android:id="@+id/gender_spinner"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:textAlignment="center"
         android:layout_margin="10dp"
         android:background="@drawable/box" />
@@ -88,43 +90,58 @@
             android:background="@drawable/box"
             android:textAlignment="center"
             android:layout_margin="10dp"
-                android:hint="Short Bio"/>
+            android:hint="@string/short_bio"/>
 
         <EditText
-        android:id="@+id/skills"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/box"
-        android:textAlignment="center"
-        android:layout_margin="10dp"
-        android:hint="Skills"/>
-
-        <EditText
-            android:id="@+id/prof_pic"
+            android:id="@+id/skills"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:inputType="textUri"
+            android:layout_height="48dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/box"
+            android:hint="Skills"
+            android:inputType="textMultiLine"
+            android:textAlignment="center"
+            android:textColorHint="#8D6E63" />
+
+        <Button
+            android:id="@+id/profile_pic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/box"
+            android:text="@string/prof_pic"
+            android:textSize="25sp" />
+
+        <ViewStub
+            android:id="@+id/profile_pic_stub"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:inflatedId="@+id/profile_pic_inflated"
+            android:layout="@layout/layout_image"/>
+
+        <include layout="@layout/layout_image" />
+
+        <EditText
+            android:id="@+id/phone_no"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:inputType="phone"
             android:background="@drawable/box"
             android:textAlignment="center"
             android:layout_margin="10dp"
-            android:hint="Profile Picture"/>
-
-        <EditText
-        android:id="@+id/phone_no"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@drawable/box"
-        android:textAlignment="center"
-        android:layout_margin="10dp"
-        android:hint="Phone Number"/>
+            android:hint="@string/phone_number"/>
 
 
         <Button
         android:id="@+id/sgn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="REGISTER"
-        android:textSize="25dp"
+        android:text="@string/register"
+        android:textSize="25sp"
         android:layout_gravity="center"
         android:layout_margin="40dp"
         android:background="@drawable/box"/>
