--- a/app/src/main/res/layout/layout_image.xml
+++ b/app/src/main/res/layout/layout_image.xml
@@ -1,7 +1,7 @@
 <!-- res/layout/layout_image.xml -->
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/profile_pic_inflated"
+    android:id="@+id/image_view"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:layout_marginStart="16dp"
